--- a/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkinsfile
@@ -70,6 +70,15 @@ environment {
             
             }
         }   
-    }   
+    }
+    stage(" Deploy ") {
+       steps {
+         script {
+            echo '<--------------- Deployment Started --------------->'
+            sh './deploy.sh'
+            echo '<--------------- Deployment Ends --------------->'
+         }
+       }
+     }   
 }
 }
